{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 22,
  "lineage": "5aeafbc2-bd0e-7fc0-7793-dd6d1fc8ef24",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:072872741194:instance/i-0e19a06e9459a248b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02a3babac61b074ff",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e19a06e9459a248b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "itai-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0be373b500a44eb51",
            "private_dns": "ip-172-31-50-139.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.50.139",
            "public_dns": "ec2-100-26-212-174.compute-1.amazonaws.com",
            "public_ip": "100.26.212.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02a3babac61b074ff",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5bed79d0c7bfa39",
            "tags": {
              "Name": "Itai-TF-Instance",
              "created_by": "Terraform"
            },
            "tags_all": {
              "Name": "Itai-TF-Instance",
              "created_by": "Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c380b5e0e1b41556",
              "vpc-0244f0258ccefe457"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:072872741194:loadbalancer/app/Itai-TF-LB/3b910c07581c5770",
            "arn_suffix": "app/Itai-TF-LB/3b910c07581c5770",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Itai-TF-LB-615081126.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:072872741194:loadbalancer/app/Itai-TF-LB/3b910c07581c5770",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Itai-TF-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04a311b6c4fab4856",
              "vpc-0244f0258ccefe457"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0653285a119a74936"
              },
              {
                "subnet_id": "subnet-08ef9f31d18b40a3f"
              },
              {
                "subnet_id": "subnet-0c5bed79d0c7bfa39"
              }
            ],
            "subnets": [
              "subnet-0653285a119a74936",
              "subnet-08ef9f31d18b40a3f",
              "subnet-0c5bed79d0c7bfa39"
            ],
            "tags": {
              "Name": "Itai-TF-LB",
              "created_by": "Terraform"
            },
            "tags_all": {
              "Name": "Itai-TF-LB",
              "created_by": "Terraform"
            },
            "vpc_id": "vpc-0244f0258ccefe457",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my-app-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:072872741194:listener/app/Itai-TF-LB/3b910c07581c5770/bf13764654c643db",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:072872741194:targetgroup/Itai-TF-TG/7d71c7d428c536e1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:072872741194:listener/app/Itai-TF-LB/3b910c07581c5770/bf13764654c643db",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:072872741194:loadbalancer/app/Itai-TF-LB/3b910c07581c5770",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my-app-lb",
            "aws_lb_target_group.my-app-tg",
            "aws_security_group.lb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my-app-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:072872741194:targetgroup/Itai-TF-TG/7d71c7d428c536e1",
            "arn_suffix": "targetgroup/Itai-TF-TG/7d71c7d428c536e1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:072872741194:targetgroup/Itai-TF-TG/7d71c7d428c536e1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Itai-TF-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Itai-TF-TG",
              "created_by": "Terraform"
            },
            "tags_all": {
              "Name": "Itai-TF-TG",
              "created_by": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0244f0258ccefe457"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:072872741194:targetgroup/Itai-TF-TG/7d71c7d428c536e1-20230328181056053500000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:072872741194:targetgroup/Itai-TF-TG/7d71c7d428c536e1",
            "target_id": "i-0e19a06e9459a248b"
          },
          "dependencies": [
            "aws_instance.my-app",
            "aws_lb_target_group.my-app-tg",
            "aws_security_group.ec2-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072872741194:security-group/sg-0c380b5e0e1b41556",
            "description": "The sg for my ec2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c380b5e0e1b41556",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "072872741194",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0244f0258ccefe457"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072872741194:security-group/sg-04a311b6c4fab4856",
            "description": "The sg for my load balancer",
            "egress": [],
            "id": "sg-04a311b6c4fab4856",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Itai-TF-LB-SG",
            "name_prefix": "",
            "owner_id": "072872741194",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Itai-TF-LB-SG",
              "created_by": "Terraform"
            },
            "tags_all": {
              "Name": "Itai-TF-LB-SG",
              "created_by": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0244f0258ccefe457"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}